--- a/index.html
+++ b/index.html
@@ -2,30 +2,37 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Site legal</title>
-	<link href="styles.css" rel="stylesheet">
+	<title>Tipos de Laranja</title>
+	<link href="Styles.css" rel="stylesheet">
 </head>
 <body>
-<ul class="cabeçalho">
-	<li>penis</li>
-	<li>penis</li>
-	<li>penis</li>
-</ul>
-<header>
-	<h1>
-		THE <br>
-		GAME <br>
-		AWARDS
-	</h1>
-</header>
-<section class="styleSection">
-	<h1>GOTYs Roubados</h1>
+<section class="navegação">
 	<ul>
-		<li>Astro Bot</li>
-		<li>Madden NFL 2004</li>
-		<li>Overwatch</li>
-		<li>The Last of Us Part II</li>
+		<li><a href="#sec1">Laranja sanguínea</a></li>
+		<li><a href="#sec2">Laranja-bahia</a></li>
+		<li><a href="#sec3">Laranja Natal</a></li>
 	</ul>
 </section>
+<header class="cabeçalho">
+	<h1>Tipos de Laranja</h1>
+</header>
+<center>
+<section class="styled" id="sec1">
+	<h2>Laranja sanguínea</h2>
+	<p>A laranja sanguínea ou laranja-de-sangue é uma variedade da laranja de coloração carmesim. O fruto é menor do que uma, a sua casca é geralmente vermelha. A polpa escura, numa distintiva cor é devida à presença de antocianina, um pigmento comum em muitas flores e frutos, mas incomum em citrinos</p>
+	<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRI2EpfrNRzl4AlpsLk5PX8IfPNkzizTb7VeA&s" height="300px" width="300px">
+</section>
+<section class="styled" id="sec2">
+	<h2>Laranja-bahia</h2>
+	<p>A laranja Bahia, também conhecida como laranja-de-umbigo, é uma variedade de laranja originária da Bahia, Brasil. Caracteriza-se por não ter sementes, ter casca grossa e polpa suculenta, levemente ácida e adocicada. É uma fruta grande, com uma protuberância na parte inferior, que lembra um umbigo. </p>
+	<img src="https://www.quitandatomio.com.br/upload/24003020-beneficios-da-laranja-bahia-para-a-saude.jpg" height="300px" width="300px">
+</section>
+<section class="styled" id="sec3">
+	<h2>Laranja Natal</h2>
+	<p>A laranja Natal é uma variedade brasileira conhecida por seu amadurecimento tardio, geralmente ocorrendo entre novembro e fevereiro, o que a torna popular para consumo durante as festas de fim de ano. É uma laranja de tamanho médio a grande, com casca ligeiramente rugosa e espessa, polpa suculenta e sabor doce com leve acidez. A laranja Natal é bem adaptada ao clima tropical e subtropical, sendo cultivada principalmente em São Paulo e Minas Gerais. </p>
+	<img src="https://cdn.awsli.com.br/2500x2500/496/496853/produto/36871034/242a4fabd2.jpg" height="300px" width="300px">
+</section>
+</center>
+<script src="JavaScript.js"></script>
 </body>
 </html>
