--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	</ul>
 </section>
 <header class="cabeçalho">
-	<h1>Tipos de Laranja</h1>
+	<h1>TIPOS DE LARANJA</h1>
 </header>
 <center>
 <section class="styled" id="sec1">
